<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    tools:context="come.jk.cn.ui.login.RegisterActivity">


    <RelativeLayout
        android:id="@+id/relayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_26">

        <TextView
            android:id="@+id/retrievepass_cancle"
            style="@style/cancle_bg_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            />


        <TextView
            android:id="@+id/text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/rce_register"
            android:textColor="#2C272D"
            android:textSize="@dimen/dp_18" />

    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/regis_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:background="@drawable/line_et_bg"
                        android:hint="@string/rce_register_hint_name"
                        android:paddingLeft="@dimen/dp_8"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/regis_aty_name_et_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/input_close"
                        android:visibility="invisible" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20">


                    <EditText
                        android:id="@+id/edi_quhao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@null"
                        android:paddingLeft="@dimen/dp_8"
                        android:singleLine="true"
                        android:text="@string/rce_register_phone_default_zip" />


                    <EditText
                        android:id="@+id/regis_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/edi_quhao"
                        android:background="@null"
                        android:hint="@string/rce_register_hint_phone"
                        android:paddingLeft="@dimen/dp_8"
                        android:singleLine="true" />


                    <ImageView
                        android:id="@+id/regis_aty_phone_et_clear"
                        android:layout_width="@dimen/dp_22"
                        android:layout_height="@dimen/dp_22"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/input_close"
                        android:visibility="gone" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/line_et_bg"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edi_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/line_et_bg"
                            android:hint="@string/rce_reset_password_code_hint"
                            android:paddingLeft="@dimen/dp_8"
                            android:singleLine="true" />


                        <TextView
                            android:id="@+id/text_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:gravity="center"
                            android:text="@string/rce_send_code"
                            android:textColor="@color/color_button_blue"
                            android:textSize="@dimen/dp_18" />

                        <ImageView
                            android:id="@+id/regis_aty_code_et_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@+id/text_code"
                            android:src="@mipmap/input_close"
                            android:visibility="invisible" />

                    </RelativeLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20">

                    <EditText
                        android:id="@+id/register_aty_pass_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_et_bg"
                        android:hint="@string/login_phont_pass_hint_tv"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:paddingLeft="@dimen/dp_8"
                        android:singleLine="true" />


                    <ImageView
                        android:id="@+id/regis_aty_pass_et_clear"
                        android:layout_width="@dimen/dp_22"
                        android:layout_height="@dimen/dp_22"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/yanjing_hui"

                        />


                </RelativeLayout>


                <Button
                    android:id="@+id/btn_aty_register"
                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_48"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_44"
                    android:background="@drawable/backyazhengma"
                    android:text="@string/rce_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16" />


            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
