<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="come.jk.cn.ui.login.LoginActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:gravity="center_horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="Welcome"
                    android:textSize="@dimen/dp_40" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30">

                    <EditText
                        android:id="@+id/login_aty_phone_et"
                        style="@style/login_logout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_et_bg"
                        android:hint="@string/login_phont_hint_tv"
                        android:inputType="number"
                        android:maxLength="15" />

                    <ImageView
                        android:id="@+id/login_aty_phone_et_clear"
                        android:layout_width="@dimen/dp_22"
                        android:layout_height="@dimen/dp_22"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/input_close"
                        android:visibility="invisible" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30">

                    <EditText
                        android:id="@+id/login_aty_pass_et"
                        style="@style/login_logout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_et_bg"
                        android:hint="@string/login_phont_pass_hint_tv"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textColorHint="@color/color_d2d2d2"

                        />


                    <ImageView
                        android:id="@+id/login_aty_pass_et_clear"
                        android:layout_width="@dimen/dp_22"
                        android:layout_height="@dimen/dp_22"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/yanjing_hui" />


                </RelativeLayout>



                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/login_aty_loginbtn"
                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_44"
                    android:background="@drawable/backyazhengma"
                    android:text="@string/login_loing_tv"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16" />





                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_18">

                    <TextView
                        android:id="@+id/login_aty_findpass_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/login_findpass_tv"
                        android:textColor="@color/login_phone_tx_c" />

                    <TextView
                        android:id="@+id/login_aty_register_tv"
                        style="@style/login_top_tv"
                        android:layout_width="@dimen/dp_32"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dp_12"
                        android:text="@string/login_aty_register_tv" />

                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_qq" />

        <ImageView
            android:id="@+id/iv_login_wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_wx" />

        <ImageView
            android:id="@+id/iv_login_wb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_weibo" />
    </LinearLayout>


</LinearLayout>
